examples/erroneous/semantic_erroneous/assigntype.grc
fun main() : nothing
  var result : int;

{
  result <- 'O';
  writeInteger(result);
  writeChar('\n');
}
